--- a/code/package.json
+++ b/code/package.json
@@ -14,4 +14,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1"
   }
+  {
+  "functions": {
+    "app/api/**": {
+      "runtime": "edge",
+      "maxDuration": 20,
+      "memory": 256
+    }
+  }
+}
+
 }
