--- a/code/package.json
+++ b/code/package.json
@@ -21,6 +21,11 @@
       "memory": 256
     
   }
+},
+  {
+  "scripts": { "build": "next build", "start": "next start", "dev": "next dev" }
+  
 }
+
 
 }
