--- a/code/vercel.json
+++ b/code/vercel.json
@@ -2,8 +2,8 @@
   "functions": {
     "app/api/**": {
       "runtime": "edge",
-      "memory": 256,
-      "maxDuration": 20
+      "maxDuration": 20,
+      "memory": 256
     }
   }
 }
