--- a/code/package.json
+++ b/code/package.json
@@ -4,5 +4,9 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
-  }
+  },
+  
+export const config = {
+  runtime: 'nodejs18.x', // or 'edge' for Edge Runtime
+}
 }
