--- a/code/package.json
+++ b/code/package.json
@@ -1,12 +1,10 @@
-{{
+{
+  
   "scripts": { "dev": "next dev", "build": "next build", "start": "next start" },
   "dependencies": {
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
-  
-"export const config" : {
-  "runtime": "nodejs18.x"
-}
+  "engines": { "node": "20.x" }  
 }
