--- a/code/.env.example
+++ b/code/.env.example
@@ -1,4 +1,4 @@
 # Copy to .env.local (local) and Vercel Project Settings (prod)
-HUGGINGFACE_TOKEN= clarifycodeproject
+HUGGINGFACE_TOKEN= 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
 HF_QUESTION_MODEL=mistralai/Mistral-7B-Instruct-v0.3
 HF_CODE_MODEL=mistralai/Mistral-7B-Instruct-v0.3
