--- a/code/tsconfig.json
+++ b/code/tsconfig.json
@@ -14,3 +14,12 @@
     "noEmit": true
   }
 }
+{
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
+  }
+}
+
