--- a/code/tsconfig.json
+++ b/code/tsconfig.json
@@ -1,16 +1,19 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ESNext",
+    "lib": ["dom", "dom.iterable", "es2022"],
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "strict": true,
+    "noEmit": true,
+    "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/lib/*": ["lib/*"]
+      "@/*": ["./*"]
     },
-    "moduleResolution": "Bundler",
-    "jsx": "preserve",
-    "strict": true,
-    "resolveJsonModule": true,
-    "noEmit": true
-  }
+    "types": ["node"]
+  },
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
