--- a/clarifycoder-code/vercel.json
+++ b/clarifycoder-code/vercel.json
@@ -1,5 +1,12 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "api/**/*.py": { "runtime": "python3.12" }
-  }
+    "api/*.py": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
+  "rewrites": [
+    { "source": "/", "destination": "/api/index.py" }
+  ]
 }
